<resources>
    <string name="app_name">Alejandría</string>
    <string name="drawer_layout_behavior">androidx.drawerlayout.widget.DrawerLayout$DrawerLayoutCompat</string>
    <string name="globalAccept">Aceptar</string>
    <string name="menu">Menu</string>
    <string name="inicio">Inicio</string>
    <string name="busqueda">Búsqueda</string>
    <string name="libros_leidos">Libros leídos</string>
    <string name="suscripcion">Suscripción</string>
    <string name="reservas">Reservas</string>
    <string name="perfil">Perfil</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="search_hint">Buscá por libro o autor...</string>
    <string name="soonBtn">Proximamente</string>
    <string name="subscribeBtn">Suscribirme</string>
    <string name="reserveBtn">Reservar</string>
    <string name="plansTitle">Planes</string>
    <string name="basicPlanTitle">Plan básico</string>
    <string name="basicPlanPrice">$500,00 / mes</string>
    <string name="basicPlanFeatures">- Reservar un libro al mes\n- Participar del club de lectura</string>
    <string name="advancedPlanTitle">Plan avanzado</string>
    <string name="advancedPlanPrice">TBD</string>
    <string name="advancedPlanFeatures">- Beneficios del plan básico\n- TBD</string>
    <string name="bookListTitle">Libros</string>
    <string name="availableBooks">Libros disponibles</string>
    <string name="google_books_api_base_url">https://www.googleapis.com/books/v1/volumes/</string>
    <string name="signin_form_real_name">Nombre completo</string>
    <string name="signin_form_nickname">Nombre público de usuario</string>
    <string name="signin_form_email">Correo electrónico</string>
    <string name="signin_form_password">Contraseña</string>
    <string name="signin_form_repeat_password">Repetir contraseña</string>
    <string name="signin_error_mail">El email no es válido</string>
    <string name="signin_error_date">La fecha no es valida</string>
    <string name="signin_error_nickname">Debe contener al menos 2 caracteres</string>
    <string name="signin_error_realname">Debe contener al menos 2 caracteres</string>
    <string name="signin_error_password">Las 2 contraseñas debes ser iguales</string>
    <string name="signin_footer_unselected">¿Ya tienes cuenta?</string>
    <string name="signin_footer_selected">Inicia sesión</string>
    <string name="signin_error_dialog_title">Ha ocurrido un error</string>
    <string name="signin_error_dialog_body">No hemos podido crear tu cuenta, inténtalo de nuevo más tarde</string>
    <string name="signin_error_dialog_positive_action">Okey :(</string>
    <string name="registro_exitoso">Registro exitoso!</string>
    <string name="error_en_registro">Error en registro</string>
    <string name="selecciona_fecha_de_nacimiento">Selecciona fecha de nacimiento</string>
    <string name="error_signin">La cuenta de email ya existe!</string>
    <string name="login_subtitle"><![CDATA[Empoyering tech amazing individuals to shine trough hackathons, talks & challenges]]></string>
    <string name="login_sign_in">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="login_button_loggin">INICIAR SESIÓN</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_hint_user">Usuario o correo</string>
    <string name="login_error_mail">El email no es válido</string>
    <string name="login_error_password">Debe contener al menos 6 caracteres</string>
    <string name="login_footer_unselected">¿Todavía no tienes cuenta?</string>
    <string name="login_footer_selected">Regístrate</string>
    <string name="login_error_dialog_title">No hemos encontrado el usuario</string>
    <string name="login_error_dialog_body">Verifique los datos o vuelva a intentarlo</string>
    <string name="login_error_dialog_negative_action">Cancelar</string>
    <string name="login_error_dialog_positive_action">Reintentar</string>
    <string name="error_login">El usuario o la contraseña son incorrectos</string>
    <string name="confirmacion">¿Está seguro de que desea cerrar sesión?</string>
    <string name="titulo_logout">¿Desea cerrar sesión?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="pw_recovery_title">Recuperar contraseña</string>
    <string name="pw_recovery_message">Se te enviará un enlace para restablecer tu contraseña</string>
    <string name="pw_recovery_email_label">Email</string>
    <string name="pw_recovery_content_description">Ingrese su dirección de correo electrónico</string>
    <string name="pw_recovery_send_btn">Enviar</string>
    <string name="pw_confirm_title">Confirmar contraseña</string>
    <string name="pw_confirm_message">Ingresa tu contraseña para confirmar los cambios</string>
    <string name="pw_confirm_password_label">Contraseña</string>
    <string name="pw_confirm_content_description">Ingrese su contraseña</string>
    <string name="pw_confirm_btn">Confirmar</string>
    <string name="personalInfo">Información personal</string>
    <string name="domicilio">Domicilio</string>
    <string name="realName">Nombre(s)</string>
    <string name="surname">Apellido(s)</string>
    <string name="email">Email</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string name="pc">Código Postal</string>
    <string name="address">Dirección</string>
    <string name="userPfpText">Foto de perfil del usuario</string>
    <string name="settingsButtonInfo">Botón que lleva a la vista de ajustes de usuario</string>
    <string name="UPMainSettingsHeader">Ajustes de usuario</string>
    <string name="UPMSEmailSettings">Cambio de correo electrónico</string>
    <string name="UPMSPwSettings">Cambio de contraseña</string>
    <string name="emailSettingsTitle">Cambio de correo electrónico</string>
    <string name="newEmail">Nuevo correo electrónico</string>
    <string name="newEmailConfirmation">Confirme nuevo correo electrónico</string>
    <string name="newEmailPwConfirmation">Contraseña</string>
    <string name="pwSettingsTitle">Cambio de contraseña</string>
    <string name="newPw">Nueva contraseña</string>
    <string name="newPwConfirmation">Confirme nueva contraseña</string>
    <string name="actualPassword">Contraseña actual</string>
    <string name="mercadopago_api_key"></string>
    <string name="mercadopago_api_base_url">https://api.mercadopago.com/</string>
    <string name="solicitud_iniciar_sesion">Iniciar sesión para suscribirse!</string>
    <string name="generales">Generales</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="notLogedReservedBooksMsg">Debes ingresar para ver tus reservas</string>
    <string name="noReservedBooksMsg">Todavia no tienes ninguna reserva</string>
    <string name="reservedBookIsbnLabel">ISBN</string>
    <string name="reservedBookTitleLabel">Titulo del Libro</string>
    <string name="reservedBookAuthorLabel">Autor del Libro</string>
    <string name="reservedBookDateLabel">Fecha de la reserva</string>
    <string name="reservedBookStatusLabel">Estado</string>
    <string name="reservedBookStatusNotRetired">Retirar en Yatay 240 de 9:00 a 20:00 hs</string>
    <string name="un_libro_para_leer">Un libro para leer</string>
    <string name="un_autor">Un autor</string>
    <string name="sinopsis">La sinopsis de un libro es un resumen breve que proporciona una descripción general de la trama, los personajes principales y el tema de la obra. Su propósito es dar a los lectores una idea general de qué trata el libro sin revelar demasiados detalles o spoilers. La sinopsis suele encontrarse en la contraportada del libro o en la solapa interior de la cubierta, y también se utiliza en las descripciones de libros en línea y catálogos de librerías.</string>
    <string name="reserva_exitosa">Reserva de libro exitosa! Puede retirar en Yatay 240 de 9:00 a 20:00 hs</string>
    <string name="no_hay_libros_disponibles_para_reservar">No hay libros disponibles para reservar.</string>
    <string name="ya_se_reservo_este_mes">Ya se reservo este mes!</string>
    <string name="subscriptionid">subscriptionId</string>
    <string name="confirm_book_reservation_dialog_fragment">ConfirmBookReservationDialogFragment\n</string>
    <string name="subscription_required_dialog_fragment">SubscriptionRequiredDialogFragment</string>
    <string name="suscripcion_exitosa">Suscripción exitosa!</string>
    <string name="reserva_de_libro">Reserva de libro</string>
    <string name="confirma_la_reserva_de_este_libro">Confirma la reserva de este libro?</string>
    <string name="no_tengo_una_cuenta">No tengo una cuenta</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="mis_reservas">Mis Reservas</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ingrese_su_apellido">Ingrese su apellido</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento (dd/MM/yyyy)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cambio_de_imagen">Cambio de Imagen</string>
    <string name="Perfil">Perfil</string>
    <string name="registro">Registro</string>
    <string name="nombre_invalido">El nombre no es valido\n</string>
    <string name="apellido_invalido">El apellido no es valido</string>
    <string name="email_invalido">El mail no es valido</string>
    <string name="fecha_invalida">La fecha no es válida</string>
    <string name="datos_actualizados_con_exito">Datos personales actualizados!</string>
    <string name="email_actualizado_con_exito">Mail actualizado con éxito!</string>
    <string name="email_no_fue_actualizado">El mail no fue actualizado</string>
    <string name="modificar_datos">Modificar datos</string>
    <string name="confirmar_contrasenia">Confirmar contraseña</string>
    <string name="ingrese_contrasenia">Ingresa tu contraseña actual para confirmar</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="confirmar_cambio_contrasenia">Confirmar</string>
    <string name="elige_imagen">Elige una imagen</string>
    <string name="texto_imagen">Descubrí un sin fin de libros</string>
    <string name="enlace_reestablecer_contrasenia">Se envió un enlace para restablecer tu contraseña</string>
    <string name="error_correo_recuperacion">Error al enviar el correo de recuperación</string>
    <string name="imagen_de_perfil_actualizada">Imagen de perfil actualizada</string>
    <string name="algolia_application_id"></string>
    <string name="algolia_api_key"></string>
    <string name="ingrese_su_fecha_de_nacimiento">Ingrese su fecha de nacimiento</string>
    <string name="ingrese_direccion_correo">Ingrese su dirección de correo electrónico</string>
    <string name="pwd">Contraseña</string>
    <string name="ingrese_su_contrasenia">Ingrese su contraseña</string>
    <string name="repetir_contrasenia">Repetir Contraseña</string>
    <string name="repita_su_contrasenia">Repita su contraseña</string>
</resources>