<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeListFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />

        <!--en ID incluir el nombre de la clase del fragment-->
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/busqueda" />

        <item
            android:id="@+id/subscriptionListFragment"
            android:icon="@drawable/ic_subscription"
            android:title="@string/suscripcion" />

        <item
            android:id="@+id/reservedBooksFragment"
            android:icon="@drawable/ic_fact_check"
            android:title="@string/reservas" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/perfil" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_cogs"
            android:title="@string/configuracion" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>