<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.subscription.SubscriptionListFragment">

    <TextView
        android:id="@+id/planTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/md_theme_light_primary"
        android:text="@string/plansTitle" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="350dp"
                android:layout_height="500dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/basicPlanTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/basicPlanTitle"
                        android:textColor="@color/md_theme_light_primary"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/basicPlanIcon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_menu_book"
                        app:tint="@color/md_theme_light_primary" />

                    <TextView
                        android:id="@+id/basicPlanFeatures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:text="@string/basicPlanFeatures"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/basicPlanPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:gravity="center"
                        android:text="@string/basicPlanPrice"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/basicPlanSubscribeBtn"
                        android:layout_width="220dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/md_theme_light_primary"
                        android:text="@string/subscribeBtn"
                        android:textSize="20dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="350dp"
                android:layout_height="500dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/advancedPlanTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/advancedPlanTitle"
                        android:textColor="@color/md_theme_light_primary"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/advancedPlanIcon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_menu_book"
                        app:tint="@color/md_theme_light_primary" />

                    <TextView
                        android:id="@+id/advancedPlanFeatures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:text="@string/advancedPlanFeatures"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/advancedPlanPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:gravity="center"
                        android:text="@string/advancedPlanPrice"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/advancedPlanSubscribeBtn"
                        android:layout_width="220dp"
                        android:layout_height="60dp"
                        android:enabled="false"
                        android:text="@string/soonBtn"
                        android:textSize="20dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>
