<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reservedBookIsbnLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_primary"
                android:text="@string/reservedBookIsbnLabel"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/reservedBookIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/reservedBookTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_primary"
                android:text="@string/reservedBookTitleLabel"
                android:textSize="20sp"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/reservedBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/reservedBookAuthorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_primary"
                android:text="@string/reservedBookAuthorLabel"
                android:textSize="20sp"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/reservedBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/reservedBookDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_primary"
                android:text="@string/reservedBookDateLabel"
                android:textSize="20sp"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/reservedBookDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="16dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>